# with-argparse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: mypy.yml  python-package.yml
test/: test_annotations.py  test_argparse.py  test_custom_parse.py  test_dataclass.py  test_glob.py  test_ignore.py
test/tools/: __init__.py  foreach.py  override_argv.py
with_argparse/: __init__.py  configure_argparse.py  disable_argparse.py  impl.py  setup.py  types.py  utils.py
